<resources>
    <string name="app_name">Score Keeper</string>
    <string name="packers">Packers</string>
    <string name="default_score">0</string>
    <string name="touchdown">Touchdown</string>
    <string name="extra_point">Extra Point</string>
    <string name="two_point_conversion">Two-Point Conversion</string>
    <string name="field_goal">Field Goal</string>
    <string name="safety">Safety</string>
    <string name="reset">Reset</string>
    <string name="broncos">Broncos</string>
</resources>
